[package]
name = "smalltalk"
version = "0.1.0"
edition = "2021"
authors = ["Rowan S-L <rowan@fawkes.io>"]
license = "GPL-3.0-only OR MIT"
readme = "README.md"
repository = "https://github.com/rowan-sl/smalltalk/"
description = "Utilities for simple networking with tokio"
keywords = ["networking", "async", "tokio"]
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "net"] }
serde = { version = "1" }
bincode = "1.3.3"
bytes = "1"
async-trait = "0.1"
thiserror = "1"