[package]
name = "smalltalk"
version = "0.1.0"
edition = "2021"
authors = ["Rowan S-L <rowan@fawkes.io>"]
license = "GPL-3.0-only OR MIT"
readme = "README.md"
homepage = "https://github.com/rowan-sl/smalltalk/"
repository = "https://github.com/rowan-sl/smalltalk/"
description = "Utilities for speeding up development of simple networked applications"
keywords = ["networking", "async", "tokio"]
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "rt-multi-thread"] }
serde = { version = "1" }
bincode = "1.3.3"
bytes = "1"
async-trait = "0.1"
thiserror = "1"

[lib]
name = "smalltalk"
path = "src/lib.rs"